# license-plate

./: .editorconfig  .flake8  .gitignore  LICENSE.rst  Makefile  README.rst  conftest.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/: manage.py
src/app/: urls.py
src/app/conf/: dev_settings.py  global_settings.py
src/app/conf/locale/de/LC_MESSAGES/: django.po
src/app/license_plate/: apps.py  datapool.py  serializers.py  validators.py  views.py
src/app/license_plate/locale/de/LC_MESSAGES/: django.po
src/testing/: settings.py
src/testing/license_plate/: test_datapool.py  test_serializer.py  test_validators.py  test_views.py
static/: german_license_plates.csv
templates/: 404.html  500.html  base.html  validation_form.html
templates/locale/de/LC_MESSAGES/: django.po
